<resources>
    <string name="app_name">TestArchitecture</string>

    <!-- Exception ObjectBox Messages -->
    <string name="generic_error_message">Ocorreu um erro, por favor tente novamente.</string>
    <string name="generic_service_error_message">Ocorreu um erro no servidor, por favor tente novamente.</string>
    <string name="generic_error_no_network">Ocorreu um erro no servidor, por favor tente novamente.</string>
    <string name="user_not_found">Usuário e/ou senha inválidos ou não existe.</string>
    <!-- Exception ObjectBox Messages -->

    <!-- Alert Modal Generic Buttons -->
    <string name="alert_generic_iv_icon_cd_text">Icone do modal</string>
    <string name="alert_generic_btn_positive_text">OK</string>
    <string name="alert_generic_btn_negative_text">Cancelar</string>
    <!-- Alert Modal Generic Buttons -->

    <!--Component Empty List-->
    <string name="cpt_empty_list_text">Não há itens a exibir...</string>
    <string name="cpt_empty_list_button_text">Tentar Novamente</string>
    <!--Component Empty List-->

    <!--Navigation Drawer-->
    <string name="navigation_drawer_open_text">Abrir menu</string>
    <string name="navigation_drawer_close_text">Fechar menu</string>
    <!--Navigation Drawer-->

    <!-- Login Activity -->
    <string name="login_et_mail_hint">E-mail</string>
    <string name="login_et_password_hint">Senha</string>
    <string name="login_btn_sign_in_text">Entrar</string>
    <string name="login_mail_invalid">O email digitado está inválido.</string>
    <string name="login_password_invalid">O campo senha é obrigatório.</string>
    <!-- Login Activity -->


</resources>
