<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/alert_generic_iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/spacing_huge"
        android:contentDescription="@string/alert_generic_iv_icon_cd_text"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/alert_generic_tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_huge"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_huge"
        android:orientation="horizontal">

        <Button
            android:id="@+id/alert_generic_btn_positive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_very_tiny"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_weight="1"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/alert_generic_btn_positive_text"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/alert_generic_btn_negative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_large"
            android:layout_marginStart="@dimen/spacing_very_tiny"
            android:layout_weight="1"
            android:backgroundTint="@color/color_gray"
            android:text="@string/alert_generic_btn_negative_text"
            android:textColor="@android:color/black" />

    </LinearLayout>

</LinearLayout>