<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/login_iv_logo"
        android:layout_width="@dimen/login_iv_logo_size"
        android:layout_height="@dimen/login_iv_logo_size"
        android:layout_gravity="center"
        android:layout_margin="@dimen/spacing_normal"
        app:srcCompat="@drawable/ic_launcher_background" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_til_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_giant">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_et_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_et_mail_hint"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_til_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/spacing_giant"
        android:layout_marginRight="@dimen/spacing_giant">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_et_password_hint"
            android:inputType="textEmailAddress" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/login_btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_giant"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/login_btn_sign_in_text"
        android:textColor="@android:color/white" />

</LinearLayout>